# cw-gce-pricing

./: .gitignore  README.md  biome.json  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: pull_request.yml  push.yml
public/data/: locations.json  machine_families.json
scripts/: generate_prices_json.py  pyproject.toml
src/: App.tsx  data.ts  index.css  main.tsx
src/components/: MultiSelectFilter.tsx  RangeFilter.tsx  SortableHeader.tsx
