[project]
name = "cw-gce-pricing"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "google-cloud-billing>=1.16.3",
    "google-cloud-compute>=1.33.0",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "ruff>=0.12.4",
]

[tool.ruff.lint]
ignore = ["F401"]
